tutorial-service/kubernetes/03_deployment.yaml
apiVersion: apps/v1

#Telling Kubernetes to make Deployment which can manage ReplicaSet aur Pods
kind: Deployment

#name of Deployment
metadata:
  name: tutorial-service

spec:
  #3 Pod will be created by this Deployment
  replicas: 3

#Deployment tracking-mechanism -> It will only manage those pods whose name is tutorial-backend
  selector:
    matchLabels:
      app: tutorial-service

#Pod template which will be used by Deployment to create Pods
  template:
    metadata:
      labels:
        app: tutorial-service

    spec:
      containers:
        - name: tutorial-service
          #image from DockerHub
          image: amirdocker2204/tutorial-service:v2

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080

            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080

            initialDelaySeconds: 60
            periodSeconds: 20

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
